fix bug with logo not showing up

--- a/public/stylesheets/yaks/show.css
+++ b/public/stylesheets/yaks/show.css
@@ -1,54 +1,14 @@
-ul {
-  list-style: none;
+#content-textarea {
+  width: 250px; 
+  height: 150px;
 }
 
-li {
-  font-weight: bold;
-}
-
-table {
-  font-size: 20px;
-}
-
-table thead th {
-  padding: 5px;
-  border-bottom: 2px solid #424748;
-}
-
-table td {
-  padding: 10px;
-  text-align: center;
-}
-
-form * {
-  padding: 5px;
-  border-radius: 5px;
-}
-
-section {
-  display: grid;
-  grid-template-columns: auto auto;
-  grid-gap: 16px;
-}
-
-section div:nth-child(even) {
-  font-weight: bold;
-}
-
-#add-review-form {
-  display: grid;
-  grid-template-columns: auto auto;
-  grid-gap: 16px;
-  margin-bottom: 20px;
-}
-
-#add-reply-form > reply-form {
-  width: 250px;
-}
-
-#add-reply-form > button {
-  font-size: 16px;
-  width: 160px;
-  grid-column: 2 / 3;
+#reply-form > button {
+  font-size: 25px;
+  width: 150px;
   margin-bottom: 24px;
+  background-color: rgb(146, 157, 152);
+}
+#reply-form > button:hover {
+  background-color: rgb(53, 194, 131);
 }
